上传插件换成bootstrap-fileinput

--- a/src/components/Carousel/WebGLCarousel.css
+++ b/src/components/Carousel/WebGLCarousel.css
@@ -1,6 +1,9 @@
+.carousel .fp-tableCell {
+	width: 100%;
+}
+
 main {
 	position: relative;
-	/* width: 100%; */
 	height: 100vh;
 	overflow: hidden;
 	margin-left: -15px;
@@ -12,6 +15,11 @@ main {
 	height: 100%;
 	margin: 0 auto;
 	position: relative;
+}
+
+#slider #image-list {
+	overflow: hidden;
+	visibility: hidden;
 }
 
 #slider canvas {
@@ -32,7 +40,7 @@ main {
 }
 
 .slider-inner {
-	position: relative;
+	position: absolute;
 	width: 28%;
 	top: 50%;
 	text-align: right;
@@ -46,16 +54,12 @@ main {
 	opacity: 0.6;
 }
 
-#slider-content h2 {
+#slider-content #slide-title {
 	font-size: 50px;
 	letter-spacing: -1px;
 	color: white;
 	line-height: 50px;
 	margin: 20px 0 30px;
-}
-
-#slider-content span {
-	display: none;
 }
 
 #slider-content .meta {
@@ -75,14 +79,14 @@ main {
 }
 
 /*#slider-content .meta:after {*/
-	/*content: '';*/
-	/*display: block;*/
-	/*position: absolute;*/
-	/*top: 5px;*/
-	/*right: -55px;*/
-	/*width: 45px;*/
-	/*height: 2px;*/
-	/*background-color: #393d40;*/
+/*content: '';*/
+/*display: block;*/
+/*position: absolute;*/
+/*top: 5px;*/
+/*right: -55px;*/
+/*width: 45px;*/
+/*height: 2px;*/
+/*background-color: #393d40;*/
 /*}*/
 
 #slider-content #slide-status {
