--- a/src/components/FileUploader/FileUploader.css
+++ b/src/components/FileUploader/FileUploader.css
@@ -1,16 +1,24 @@
-/*.webuploader-container {*/
-	/*position: absolute;*/
-	/*z-index: 9999;*/
-/*}*/
+.file-preview {
+	padding: 15px;
+	margin-bottom: 0;
+	border: unset;
+	border-radius: unset;
+}
 
-.webuploader-pick {
-	position: relative;
-	display: block;
-	cursor: pointer;
-	background-color: #343a40;
-	padding: unset;
-	color: #fff;
-	text-align: center;
-	border-radius: 3px;
+.file-input .card-body {
+	margin-left: -1px;
+	margin-right: -1px;
+}
+
+.file-video .file-preview-thumbnails {
+	height: 400px;
+}
+
+.file-audio .file-preview-thumbnails {
+	height: 60px;
+}
+
+.file-image .file-preview-thumbnails {
+	height: 400px;
 	overflow: hidden;
 }
