--- a/src/pages/BlogList.css
+++ b/src/pages/BlogList.css
@@ -1,12 +1,33 @@
 .blog-content {
-	margin-top: 60px;
-	padding-top: 15px;
-}
-
-.grid-item {
-	margin-bottom: 10px;
+    margin-top: 60px;
+    padding-top: 15px;
 }
 
 .grid {
-	margin: 0 auto;
+    margin: 0 auto;
+}
+
+.grid-item {
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.grid-sizer, .grid-item {
+    width: 20%;
+}
+
+.grid-item--width2 {
+    width: 40%;
+}
+
+.grid-item--width3 {
+    width: 60%;
+}
+
+.grid-item--width4 {
+    width: 80%;
+}
+
+.grid-item--width5 {
+    width: 100%;
 }
