--- a/src/components/Carousel/WebGLCarousel.css
+++ b/src/components/Carousel/WebGLCarousel.css
@@ -6,30 +6,18 @@ main {
 	position: relative;
 	height: 100vh;
 	overflow: hidden;
-	margin-left: -15px;
-	margin-right: -15px;
+	margin: 0 -15px;
 }
 
 #slider {
-	width: 100%;
-	height: 100%;
-	margin: 0 auto;
+	width: 100vw;
+	height: calc(100vh - 112px);
 	position: relative;
 }
 
 #slider #image-list {
 	overflow: hidden;
 	visibility: hidden;
-}
-
-#slider canvas {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 2;
 }
 
 #slider img {
