进一步减小首页图片大小

--- a/src/components/Carousel/WebGLCarousel.css
+++ b/src/components/Carousel/WebGLCarousel.css
@@ -2,16 +2,9 @@
 	width: 100%;
 }
 
-main {
-	position: relative;
-	height: 100vh;
-	overflow: hidden;
-	margin: 0 -15px;
-}
-
 #slider {
 	width: 100vw;
-	height: calc(100vh - 112px);
+	height: 100%;
 	position: relative;
 }
 
@@ -65,17 +58,6 @@ main {
 		font-size: 13px;
 	}
 }
-
-/*#slider-content .meta:after {*/
-/*content: '';*/
-/*display: block;*/
-/*position: absolute;*/
-/*top: 5px;*/
-/*right: -55px;*/
-/*width: 45px;*/
-/*height: 2px;*/
-/*background-color: #393d40;*/
-/*}*/
 
 #slider-content #slide-status {
 	margin-top: 10px;
