--- a/src/index.css
+++ b/src/index.css
@@ -1,49 +1,51 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+	"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+	sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+	monospace;
 }
 
 a.navbar-brand {
-    padding: unset;
+	padding: unset;
 }
 
 .logo-container img {
-    height: 32px;
-    float: left;
-    animation: App-logo-spin infinite 2s linear;
+	height: 32px;
+	float: left;
+	animation: App-logo-spin infinite 2s linear;
 }
 
 /*抵消边框1px*/
 .card-header.bg-dark {
-    margin-left: -1px;
-    margin-right: -1px;
-    border-radius: calc(.25rem) calc(.25rem) 0 0;
+	margin-left: -1px;
+	margin-right: -1px;
+	border-radius: calc(.25rem) calc(.25rem) 0 0;
 }
 
 /*去下划线*/
 a.non-text-decoration:focus, a.non-text-decoration:hover {
-    text-decoration: none
+	text-decoration: none
 }
 
 @keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
 
 .container-fluid.container-body {
-    margin-top: 56px;
+	margin-top: 56px;
+	margin-bottom: 56px;
+	height: calc(100vh - 112px);
 }
