优化页面样式

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.bg-classic-blue {
+	background-color: #0f4c81 !important;
+}
+
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 	monospace;
