--- a/src/components/Carousel/WebGLCarousel.css
+++ b/src/components/Carousel/WebGLCarousel.css
@@ -86,11 +86,11 @@
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
-	border: 0;
 	width: 16px;
 	height: 16px;
 	background-color: #FFFFFF;
 	border-radius: 100%;
+	border: 1px solid rgb(255, 255, 255);
 	padding: 0;
 	margin: 30px 0;
 	cursor: pointer;
@@ -105,13 +105,13 @@
 }
 
 #pagination button.active {
-	opacity: 1;
+	opacity: 0.8;
 }
 
 #pagination button.active:before {
 	width: 300%;
 	height: 300%;
-	opacity: 1;
+	opacity: 0.8;
 }
 
 #pagination button:before {
@@ -124,7 +124,7 @@
 	width: 100%;
 	height: 100%;
 	border-radius: 100%;
-	border: 1px solid rgba(255, 255, 255, 0.2);
-	opacity: 0;
+	border: 1px solid rgb(255, 255, 255);
+	opacity: 0.2;
 	transition: opacity 0.4s ease-in-out, width 0.4s ease-in-out, height 0.4s ease-in-out;
 }
