--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ a.non-text-decoration:focus, a.non-text-decoration:hover {
 }
 
 .container-fluid.container-body {
-	margin-top: 56px;
-	margin-bottom: 56px;
-	height: calc(100vh - 112px);
+	padding-top: 56px;
+	padding-bottom: 56px;
+	height: 100vh;
 }
